force-app/main/default/objects/Employee__c/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <description>Designation of the employee</description>
    <label>Designation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AMTS</fullName>
                <default>true</default>
                <label>AMTS</label>
            </value>
            <value>
                <fullName>MTS</fullName>
            </value>
            <value>
                <fullName>SMTS</fullName>
            </value>
            <value>
                <fullName>LMTS</fullName>
            </value>
            <value>
                <fullName>Senior Manager</fullName>
            </value>
            <value>
                <fullName>Senior Director</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>