force-app/main/default/objects/Employee__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Mail Id of the Employee</description>
    <label>Email</label>
    <required>true</required>
    <type>Email</type>
    <unique>true</unique>
</CustomField>