force-app/main/default/objects/Employee__c/fields/Employee_Id__c.field-meta.xml
<CustomField>
    <fullName>Employee_Id__c</fullName>
    <description>Employee Id of the Employee</description>
    <externalId>true</externalId>
    <label>Employee Id</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>