force-app/main/default/objects/Employee__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Location of the Employee</description>
    <label>Office Location</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>